--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "classnames": "^2.2.5",
+    "lodash": "^4.13.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
