--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-form": "^5.2.5"
   }
 }
