added dash-assert for function arguments/result validation

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.0.15",
-    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "dash-assert": "^1.2.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "mocha": "^2.5.3",
