--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.0.15",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "dash-assert": "^1.2.0",
+    "enzyme": "^2.4.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^3.0.0-beta.1",
+    "sinon": "^1.17.5",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
