--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
-    "babel-plugin-rewire": "^1.0.0-rc-1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -40,6 +39,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.8.0",
     "dash-assert": "^1.2.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.0",
@@ -55,7 +55,9 @@
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.1.1",
+    "rewire": "^2.5.2",
     "sinon": "^1.17.6",
+    "sinon-chai": "^2.11.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.5"
