--- a/package.json
+++ b/package.json
@@ -27,25 +27,27 @@
   "license": "MIT",
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.0.15",
-    "babel-register": "^6.11.6",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "dash-assert": "^1.2.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "mocha": "^2.5.3",
-    "react-addons-test-utils": "^15.3.0",
-    "react-hot-loader": "^3.0.0-beta.1",
-    "sinon": "^1.17.5",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "enzyme": "^2.6.0",
+    "eslint": "^3.10.2",
+    "eslint-plugin-react": "^6.7.1",
+    "jsdom": "^9.8.3",
+    "jsdom-global": "^2.1.0",
+    "mocha": "^3.1.2",
+    "react-addons-test-utils": "^15.4.0",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sinon": "^1.17.6",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
