- index.html generated with html-webpack-plugin - introduced babelrc env - added test/setup.js for mounting React components in tests

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["es2015", "stage-0", "react", "react-hmre"],
-  "plugins": ["react-hot-loader/babel"]
+  "env": {
+    "dev": {
+      "presets": [ "es2015", "stage-0", "react", "react-hmre" ],
+      "plugins": [ "react-hot-loader/babel" ]
+    },
+    "test": {
+      "presets": [ "es2015", "stage-0", "react" ],
+      "plugins": [ "react-hot-loader/babel" ]
+    },
+    "prod": {
+      "presets": [ "es2015", "stage-0", "react" ]
+    }
+  }
 }
