--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "lodash": "^4.17.2",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6",
+    "lodash": "^4.17.4",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.30.8",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-dom": "^15.5.4",
+    "react-redux": "^4.4.8",
     "redux": "^3.6.0",
-    "redux-form": "^6.2.0"
+    "redux-form": "^6.6.3"
   }
 }
