--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-rewire": "^1.0.0-rc-1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
