--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
-    "start": "BABEL_ENV=dev node server.js",
+    "start": "cross-env NODE_ENV=dev webpack-dev-server --config webpack.config.dev.js",
     "dist": "BABEL_ENV=prod webpack --config webpack.config.prod.js --progress -p",
     "lint": "eslint src",
     "test": "BABEL_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js",
@@ -28,41 +28,53 @@
   "license": "MIT",
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-rewire": "^1.0.0-rc-1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "dash-assert": "^1.2.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.0",
-    "eslint-plugin-react": "^6.7.1",
-    "html-webpack-plugin": "^2.24.1",
+    "eslint-plugin-react": "^6.10.3",
+    "html-webpack-plugin": "^2.29.0",
     "jsdom": "^9.8.3",
     "jsdom-global": "^2.1.0",
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.4.1",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.1.1",
     "sinon": "^1.17.6",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "lodash": "^4.17.4",
+    "node-sass": "^4.5.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^15.5.4",
-    "react-redux": "^4.4.8",
+    "react-fa": "^4.2.0",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-form": "^6.6.3"
+    "redux-form": "^6.6.3",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1"
   }
 }
