--- a/package.json
+++ b/package.json
@@ -65,18 +65,19 @@
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
     "react-bootstrap": "^0.30.8",
     "react-bootstrap-datetimepicker": "0.0.22",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.1",
     "react-fa": "^4.2.0",
-    "react-redux": "^5.0.3",
-    "redux": "^3.6.0",
-    "redux-form": "^6.6.3",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-form": "^6.8.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1"
   }
