--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,50 @@
 {
   "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
+    "arrowFunctions": true,
+    "blockBindings": true,
+    "classes": true,
+    "defaultParams": true,
+    "destructuring": true,
+    "forOf": true,
+    "generators": false,
+    "modules": true,
+    "objectLiteralComputedProperties": true,
+    "objectLiteralDuplicateProperties": false,
+    "objectLiteralShorthandMethods": true,
+    "objectLiteralShorthandProperties": true,
+    "spread": true,
+    "superInFunctions": true,
+    "templateStrings": true,
+    "jsx": true
   },
   "env": {
     "browser": true,
     "node": true
   },
   "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
     "quotes": [2, "single"],
     "strict": [2, "never"],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2
+    "react/react-in-jsx-scope": 2,
+    "no-unused-vars": "warn",
+    "no-console": "off",
+    "react/prop-types": "warn"
   },
   "plugins": [
     "react"
-  ]
+  ],
+  "globals": {
+    "Symbol": false,
+    "window": false,
+    "process": false,
+    "require": false,
+    "module": false,
+    "__dirname": false
+  }
 }
