--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "mocha": true
   },
   "parser": "babel-eslint",
   "extends": [
