Replaced Bootstrap with semantic-ui
* fixed state update when adding extra payment

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "plugin:react/recommended"
   ],
   "rules": {
+    "semi": [2, "always"],
     "quotes": [2, "single"],
     "strict": [2, "never"],
     "react/jsx-uses-react": 2,
