--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "mortgage-calc",
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
+    "url": "https://github.com/vojtechsoban/mortgage-calc.git"
   },
   "keywords": [
     "react",
@@ -24,13 +24,13 @@
     "edit",
     "webpack"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Vojtech Soban <vojtech.soban@gmail.com> (http://github.com/vojtechsoban)",
   "license": "MIT",
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+  "homepage": "https://github.com/vojtechsoban/mortgage-calc",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -44,7 +44,7 @@
     "enzyme": "^2.6.0",
     "eslint": "^3.11.0",
     "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "jsdom": "^9.8.3",
@@ -59,8 +59,8 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.11.0",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -73,14 +73,15 @@
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.30.8",
-    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datetime": "^2.9.0",
     "react-dom": "^15.6.1",
     "react-fa": "^4.2.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
     "sass-loader": "^6.0.3",
+    "semantic-ui-css": "^2.2.11",
+    "semantic-ui-react": "^0.71.3",
     "style-loader": "^0.16.1"
   }
 }
