--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
   "devDependencies": {
     "app-module-path": "^2.2.0",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -58,51 +59,52 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.8.0",
+    "chai": "^4.1.2",
+    "chai-enzyme": "^1.0.0-beta.0",
     "dash-assert": "^1.2.0",
-    "enzyme": "^2.6.0",
-    "eslint": "^3.11.0",
-    "eslint-plugin-react": "^6.10.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.17.0",
+    "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.29.0",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.1.1",
-    "rewire": "^2.5.2",
-    "sinon": "^1.17.6",
+    "rewire": "^3.0.2",
+    "sinon": "^4.2.2",
     "sinon-chai": "^2.11.0",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.6.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "node-sass": "^4.5.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.1.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-datetime": "^2.9.0",
-    "react-dom": "^15.6.1",
-    "react-fa": "^4.2.0",
+    "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
-    "redux-form": "^6.8.0",
+    "redux-form": "^7.2.3",
     "sass-loader": "^6.0.3",
     "semantic-ui-css": "^2.2.11",
-    "semantic-ui-react": "^0.71.3",
-    "style-loader": "^0.16.1"
+    "semantic-ui-react": "^0.78.2",
+    "style-loader": "^0.20.1"
   }
 }
