--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /node_modules
-/artifacts
-/npm-debug.log
-/.DS_Store
-/dist
+/build
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 /.idea
-*.iml
+/*.iml
+/.DS_Store
+
