--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "formik": "^1.5.7",
-    "mocha": "^6.1.4",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fa": "^5.0.0",
+    "react-hot-loader": "^4.12.0",
+    "react-intl": "^2.9.0",
     "react-scripts": "3.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -34,5 +40,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "app-module-path": "^2.2.0",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "dash-assert": "^1.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^6.1.4",
+    "react-addons-test-utils": "^15.6.2",
+    "rewire": "^4.0.1",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0"
   }
 }
