--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
     "formik": "^1.5.7",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-fa": "^5.0.0",
     "react-hot-loader": "^4.12.0",
     "react-intl": "^2.9.0",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
     "typescript": "3.5.2"
@@ -51,6 +56,7 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "react-addons-test-utils": "^15.6.2",
     "rewire": "^4.0.1",
     "sinon": "^7.3.2",
