--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
-    "react-datetime": "^2.16.3",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-fa": "^5.0.0",
@@ -46,12 +45,14 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-semantic-ui-datepickers": "^1.10.0",
     "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.2",
+    "semantic-ui-react": "^0.87.3",
     "semver": "6.0.0",
+    "spected": "^0.7.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-loader": "^6.0.4",
